--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -1,5 +1,6 @@
-.login-form {
-  font-family: "Montserrat", sans-serif; 
+.form {
+font-family: "Montserrat", sans-serif;
+  
 font-size: 16px;
 font-weight:400;
 line-height: 32px;
@@ -10,8 +11,8 @@ text-align: left;
   flex-direction: column;
   padding: 24px;
   column-gap: 8px;
-  width: 408px;
-height: 256px;
+  width: 360px;
+/* height: 500px; */
 margin-top: 50px;
 margin-left: auto;
 margin-right: auto;
@@ -20,7 +21,7 @@ margin-right: auto;
 row-gap: 16px;
 }
 
-.label-task4 {
+.label {
   display:flex;
 flex-direction: column;
 width: 360px;
@@ -28,11 +29,20 @@ height: 72px;
 padding-top: 0px;
 padding-bottom: 0px;
 }
-.input-task4 {
+.input {
   width: 360px;
   height: 40px;;
 }
-.btn-task4 {
+
+.label-textarea {
+    width: 360px;
+   
+    display:flex;
+flex-direction: column;
+padding-top: 0px;
+padding-bottom: 0px;
+}
+.btn {
   width: 86px;
 height: 40px;
 padding: 8px, 16px, 8px, 16px;
@@ -51,7 +61,7 @@ border: 0;
 cursor: pointer;
 }
 
-.btn-task4:hover,
-.btn-task4:focus {
+.btn:hover,
+.btn:focus {
 background-color: #4E75FF;
 }
